[package]
name = "bevy_terminal_display"
version = "0.4.4"
edition = "2021"
license = "0BSD OR MIT OR Apache-2.0"
description = "A plugin for the Bevy game engine which enables rendering to a terminal using unicode braille characters."
repository = "https://github.com/exvacuum/bevy_terminal_display"

[dependencies]
crossbeam-channel = "0.5"
downcast-rs = "1.2"
once_cell = "1.19"
ratatui = "0.28"
color-eyre = "0.6"
leafwing-input-manager = "0.15"
serde = "1.0"
smol_str = "0.2"

[dependencies.bevy_headless_render]
git = "https://github.com/exvacuum/bevy_headless_render"

[dependencies.bevy_dither_post_process]
git = "https://github.com/exvacuum/bevy_dither_post_process"
branch = "wip"

[dependencies.bevy]
version = "0.14"
default-features = false
features = ["bevy_render"]

[dependencies.crossterm]
version = "0.28"
features = ["serde"]
