[package]
name = "bevy_terminal_display"
version = "0.5.0"
edition = "2021"
license = "0BSD OR MIT OR Apache-2.0"
description = "A plugin for the Bevy game engine which enables rendering to a terminal using unicode braille characters."
repository = "https://git.exvacuum.dev/bevy_terminal_display"

[dependencies]
crossbeam-channel = "0.5"
crossterm = "0.28"
downcast-rs = "1.2"
once_cell = "1.19"
bevy_headless_render = "0.2"
bevy_dither_post_process = "0.3"
ratatui = "0.29"
color-eyre = "0.6"

[dependencies.bevy]
version = "0.15"
default-features = false
features = ["bevy_render"]
